# DevFest-Cerrado

./: .env.example  CONTRIBUTING.md  RAG_com_Gemma_2B.ipynb  README.md  Vini_Primeiros_passos_com_PaliGemma.ipynb  pyproject.toml  requirements.txt
notebooks/: 01_Demo_Gemma.ipynb  04_Intro_Multimodal.ipynb  05_Prompt_Engineering_Gemini.ipynb
src/: __init__.py  config.py  llm_client.py  rag_utils.py
tests/: test_llm_client.py
